--- a/heml/config.json
+++ b/heml/config.json
@@ -1,5 +1,7 @@
-
-"diasDB":{
-  "port": 5432,
-  "password": "1234"
+{
+  "port": "5432",
+  "password": "1234",
+"username" : "dias",
+"host" : "127.0.0.1",
+"name_db" : "postgres"
 }
