--- a/heml/config.json
+++ b/heml/config.json
@@ -1,9 +1,9 @@
 {
   "db" : {
     "port": "5432",
-    "password": "1234",
-    "username" : "dias",
-    "host" : "127.0.0.1",
+    "password": "12345678",
+    "username" : "postgres",
+    "host" : "db-university.coly66w7nwap.eu-central-1.rds.amazonaws.com",
     "name_db" : "postgres"
   }
 
