--- a/heml/developers/config.json
+++ b/heml/developers/config.json
@@ -4,7 +4,8 @@
     "password": "12345678",
     "username" : "postgres",
     "host" : "db-university.coly66w7nwap.eu-central-1.rds.amazonaws.com",
-    "name_db" : "postgres"
+    "name_db" : "postgres",
+    "Timeout" : 10
   }
 
 }
